tests/acceptance/modules/k3scluster/master/v120ingresspolicy.yaml
# 1.20
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-traefik-v120-ingress
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: traefik
  ingress:
    - {}
  policyTypes:
    - Ingress
