tests/acceptance/modules/k3scluster/master/v121ingresspolicy.yaml
# 1.21
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-traefik-v121-ingress
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - {}
  policyTypes:
    - Ingress
